2008-02-17  Stefan Jahn  <stefan@lkcc.org>

	* rfedd.cpp (RFedd): Added preliminary implementation of an
	equation defined RF device.

2008-02-08  Stefan Jahn  <stefan@lkcc.org>

	* potentiometer.cpp (potentiometer): Added new Potentiometer
	Verilog-A model.  Thanks to Mike!

2008-01-25  Stefan Jahn  <stefan@lkcc.org>

	* component.cpp (getComponentFromName): Fixed loading/undo/redo of
	thyristor component.

2008-01-21  Stefan Jahn  <stefan@lkcc.org>

	* hic0_full.cpp (hic0_full): Added HICUM L0 v1.12 component.

2008-01-19  Stefan Jahn  <stefan@lkcc.org>

	* log_amp.cpp (log_amp): Added new Logarithmic Amplifier verilog
	device.  Thanks to Mike Brinson!

2008-01-16  Stefan Jahn  <stefan@lkcc.org>

	* diac.cpp (Diac): Added some more properties.

2008-01-02  Stefan Jahn  <stefan@lkcc.org>

	* triac.cpp (Triac), thyristor.cpp (Thyristor), diac.cpp (Diac):
	Added new components.

2007-12-26  Stefan Jahn  <stefan@lkcc.org>

	* hic2_full.cpp (hic2_full): Added units to property descriptions.
	Fixed default symbol (npn).

2007-12-20  Stefan Jahn  <stefan@lkcc.org>

	* hic2_full.h (class hic2_full): Added HICUM L2 v2.22 component.

2007-12-13  Stefan Jahn  <stefan@lkcc.org>

	* mod_amp.cpp (mod_amp): Added new Modular OpAmp verilog device.
	Thanks to Mike Brinson!

2007-10-23  Stefan Jahn  <stefan@lkcc.org>

	* ifile.cpp (iFile): Added new file based current source.

2007-10-22  Stefan Jahn  <stefan@lkcc.org>

	* HBT_X.cpp (HBT_X), hicumL2p1.cpp (createSymbol): Cosmetic
	changes on the schematic symbol.

2007-10-21  Stefan Jahn  <stefan@lkcc.org>

	* vfile.cpp (vFile): Added new voltage gain and delay time
	properties.

2007-09-17  Stefan Jahn  <stefan@lkcc.org>

	* component.cpp (load): Fixed a bug due to one or more '=' in
	equations while loading a component.

2007-08-15  Stefan Jahn  <stefan@lkcc.org>

	* subcircuit.cpp (createSymbol): Remove unused ports for symbol
	painting algorithm.  It comes to unused ports when the port