@@ -5999,6 +5999,14 @@ Use:  qucsedit [-r] archivo
         <source>RF</source>
         <translation type="unfinished"></translation>
     </message>
+    <message>
+        <source>equation defined 2-port RF device</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Equation Defined 2-port RF Device</source>
+        <translation type="unfinished"></translation>
+    </message>
 </context>
 <context>
     <name>QucsActions</name>
