@@ -6024,6 +6024,14 @@ Invocation :  qucsedit [-r] fichier
         <source>RF</source>
         <translation type="unfinished"></translation>
     </message>
+    <message>
+        <source>equation defined 2-port RF device</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Equation Defined 2-port RF Device</source>
+        <translation type="unfinished"></translation>
+    </message>
 </context>
 <context>
     <name>QucsActions</name>
